Fix openconnect dialog

Previous patch removing "Show passwords" checkbox changed layout order and
we forgot to address that.

Patch from Simon Munton

BUG:356587
BUG:356622